PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.syntax-error-when-running-a-script-with-python-2.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/11170827/how-do-i-tell-a-python-script-to-use-a-particular-version">How do I tell a Python script to use a particular version</a>
<span class="question-originals-answer-count">
                    5 answers
                </span>
</li>
</ul>
</div>
<p>I'm  a newbie in python. </p>
<p>I try to run Alexa with my ReSpeaker Mic and I'm following all the steps from <a href="https://github.com/respeaker/avs" rel="nofollow noreferrer">https://github.com/respeaker/avs</a>. But I have a bunch of errors when I try to run <code>alexa-auth</code>. </p>
<p>The issues are the following : </p>
<pre><code>Traceback (most recent call last):
File "/home/lilitsve/.local/bin/alexa-auth", line 7, in &lt;module&gt;
    from avs.auth import main
  File "/home/lilitsve/.local/lib/python2.7/site-packages/avs/auth.py", line 9, in &lt;module&gt;
    import tornado.httpserver
  File "/home/lilitsve/.local/lib/python2.7/site-packages/tornado/httpserver.py", line 144
    def __init__(self, *args: Any, **kwargs: Any) -&gt; None:
                            ^
SyntaxError: invalid syntax
</code></pre>
<p>I found some similar issues which suggested to use python3 instead of python2. On my computer (Linux Ubuntu), I have python2.7, python3 and python3.7 installed, but I don't know how to switch to python3 and make my code use the python3 version. But still, <strong>I'm not sure my problem is coming from the python version</strong> (need confirmation)</p>
<p>Any help would be greatly appreciated !</p>
</div>
<div class="post-text" itemprop="text">
<p>There are some ways to use any version and run your project in your desire version.</p>
<p><strong>Step 1:</strong></p>
<p>If you are using Ubuntu. run this command in your command line</p>
<p><code>pip3 install virtualenv</code></p>
<p><strong>Step 2 :</strong> 
Enter your avs project folder</p>
<p><code>cd avs</code></p>
<p>Then run this</p>
<p><code>virtualenv -p python3 venv</code>   [python3 = python version; venv=virtualenv name]</p>
<p><code>source venv/bin/activate</code></p>
<p><strong>Finally</strong></p>
<p><code>python setup.py install</code></p>
<p>above the example your project will run on python3</p>
<p><strong>Another way that is on your gitrepo example</strong>
<code>https://github.com/respeaker/avs</code></p>
<pre><code>sudo apt-get install mpg123 mpv
sudo apt-get install gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly \
gir1.2-gstreamer-1.0 python3-gi python3-gst-1.0
sudo apt-get install python3-pyaudio
</code></pre>
<p>I change python-pyaudio to python3-pyaudio</p>
<p>If have more queries comment below</p>
</div>
<span class="comment-copy">related/dupe: <a href="//stackoverflow.com/q/11170827">How do I tell a Python script to use a particular version</a></span>
<span class="comment-copy">When executing the code, use <code>python3 file.py</code>  instead of <code>python</code></span>
<span class="comment-copy">Thank you @Aran-Fey. Thank you @Peter Wood. As mentionned in the related issue, I tried to add the version   at the first line of the script <code>#!/usr/bin/python3</code> instead of <code>#!/usr/bin/python</code>. That resolved my issue but now I'm getting <code>Traceback (most recent call last):   File "/home/lilitsve/.local/bin/alexa-auth", line 7, in &lt;module&gt;     from avs.auth import main ImportError: No module named 'avs'</code> The module avs is installed with <code>pip install avs</code> but it seems not to be recognized by the python3. Now, how can I specify the dependencies to be used under/with the python3 ?</span>
<span class="comment-copy">Thank you ! But now I'm getting <code>usage: setup.py [global_opts] cmd1 [cmd1_opts] [cmd2 [cmd2_opts] ...]    or: setup.py --help [cmd1 cmd2 ...]    or: setup.py --help-commands    or: setup.py cmd --help  error: no commands supplied</code></span>
<span class="comment-copy">Unfortunately, the second example (modifying the gitrepo example) is not working for me, I still get the same errors.</span>
<span class="comment-copy">does first example work or show same errors? If first example .. first have to activate venv and then run the command .</span>
<span class="comment-copy">the first example is giving the following error <code>usage: setup.py [global_opts] cmd1 [cmd1_opts] [cmd2 [cmd2_opts] ...] or: setup.py --help [cmd1 cmd2 ...] or: setup.py --help-commands or: setup.py cmd --help error: no commands supplied</code> I suppose <code>python setup.py</code> needs arguments, but I don't know which ones.</span>
<span class="comment-copy"><code>python setup.py install</code>   This will work.. I test it on my local pc. works perfectly</span>
